[gd_scene load_steps=4 format=3 uid="uid://dhtpye5urrv38"]

[ext_resource type="Script" uid="uid://b7pngiy78imfl" path="res://title_screen.gd" id="1_v6p8y"]

[sub_resource type="FontVariation" id="FontVariation_v6p8y"]

[sub_resource type="FontVariation" id="FontVariation_ak2if"]
base_font = SubResource("FontVariation_v6p8y")

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v6p8y")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1161.0
offset_bottom = 656.0

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 1148.0
offset_bottom = 414.0
theme_override_colors/font_color = Color(0.00026472422, 0.0017993086, 0.0026963148, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = SubResource("FontVariation_ak2if")
theme_override_font_sizes/font_size = 59
text = "群青症候群"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 345.0
offset_top = 423.0
offset_right = 812.0
offset_bottom = 536.0

[node name="StartButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "はじめから"

[node name="LoadButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "ロード"

[node name="Part2Button" type="Button" parent="MainMenu"]
visible = false
layout_mode = 2
text = "日々の章"

[node name="ChapterSelectButton" type="Button" parent="MainMenu"]
visible = false
layout_mode = 2
text = "読み直し"

[node name="QuitButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "やめる"

[node name="DeleteConfirmDialog" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
ok_button_text = "削除"
dialog_text = "削除の確認"
dialog_autowrap = true
cancel_button_text = "キャンセル"

[node name="LoadMenu" type="Panel" parent="."]
layout_mode = 0
offset_right = 1139.0
offset_bottom = 644.0

[node name="VBoxContainer" type="VBoxContainer" parent="LoadMenu"]
layout_mode = 0
offset_left = 67.0
offset_top = 128.0
offset_right = 1043.0
offset_bottom = 405.0

[node name="Label" type="Label" parent="LoadMenu/VBoxContainer"]
layout_mode = 2
text = "ロードするファイルを選択"

[node name="DeletModeButton" type="CheckButton" parent="LoadMenu/VBoxContainer"]
layout_mode = 2
text = "削除モード"

[node name="AutoSaveButton" type="Button" parent="LoadMenu/VBoxContainer"]
layout_mode = 2

[node name="Slot1Button" type="Button" parent="LoadMenu/VBoxContainer"]
layout_mode = 2

[node name="Slot2Button" type="Button" parent="LoadMenu/VBoxContainer"]
layout_mode = 2

[node name="Slot3Button" type="Button" parent="LoadMenu/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="LoadMenu/VBoxContainer"]
layout_mode = 2
text = "戻る"

[node name="SEPlayer" type="AudioStreamPlayer" parent="."]

[node name="ChapterSelectMenu" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 88.0
offset_top = 89.0
offset_right = 369.0
offset_bottom = 438.0

[node name="VBoxContainer" type="VBoxContainer" parent="ChapterSelectMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="ChapterSelectMenu/VBoxContainer"]
layout_mode = 2
text = "チャプター選択"

[node name="GridContainer" type="GridContainer" parent="ChapterSelectMenu/VBoxContainer"]
layout_mode = 2

[node name="Btn_Prologue" type="Button" parent="ChapterSelectMenu/VBoxContainer/GridContainer"]
layout_mode = 2
text = "プロローグ"

[node name="Btn_Day1" type="Button" parent="ChapterSelectMenu/VBoxContainer/GridContainer"]
layout_mode = 2
text = "DAY1"

[node name="Btn_Day2" type="Button" parent="ChapterSelectMenu/VBoxContainer/GridContainer"]
layout_mode = 2
text = "DAY2"

[node name="Btn_Day3" type="Button" parent="ChapterSelectMenu/VBoxContainer/GridContainer"]
layout_mode = 2
text = "DAY3"

[node name="Btn_Day4" type="Button" parent="ChapterSelectMenu/VBoxContainer/GridContainer"]
layout_mode = 2
text = "DAY4"

[node name="Btn_Day5" type="Button" parent="ChapterSelectMenu/VBoxContainer/GridContainer"]
layout_mode = 2
text = "DAY5"

[node name="Btn_Day6" type="Button" parent="ChapterSelectMenu/VBoxContainer/GridContainer"]
layout_mode = 2
text = "DAY6"

[node name="Btn_Day7" type="Button" parent="ChapterSelectMenu/VBoxContainer/GridContainer"]
layout_mode = 2
text = "DAY7"

[node name="BackButton" type="Button" parent="ChapterSelectMenu/VBoxContainer"]
layout_mode = 2
text = "戻る"

[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/LoadButton" to="." method="_on_load_menu_button_pressed"]
[connection signal="pressed" from="MainMenu/Part2Button" to="." method="_on_part_2_button_pressed"]
[connection signal="pressed" from="MainMenu/ChapterSelectButton" to="." method="_on_chapter_select_button_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="LoadMenu/VBoxContainer/DeletModeButton" to="." method="_on_delet_mode_button_pressed"]
[connection signal="pressed" from="LoadMenu/VBoxContainer/AutoSaveButton" to="." method="_on_auto_save_button_pressed"]
[connection signal="pressed" from="LoadMenu/VBoxContainer/Slot1Button" to="." method="_on_slot_1_button_pressed"]
[connection signal="pressed" from="LoadMenu/VBoxContainer/Slot2Button" to="." method="_on_slot_2_button_pressed"]
[connection signal="pressed" from="LoadMenu/VBoxContainer/Slot3Button" to="." method="_on_slot_3_button_pressed"]
[connection signal="pressed" from="LoadMenu/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ChapterSelectMenu/VBoxContainer/BackButton" to="." method="_on_chapter_back_button_pressed"]
